<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/white"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/langues"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:src="@drawable/ic_language_blue"
        android:padding="10dp"
        android:layout_alignParentTop="true"/>

    <RelativeLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/login_bg"
        android:gravity="center">


        <ImageView
            android:id="@+id/logo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/ic_logo_blue"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"/>

        <TextView
            android:id="@+id/appname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_name"
            android:fontFamily="@font/helvetica"
            android:layout_centerHorizontal="true"
            android:textColor="@color/blue"
            android:layout_below="@id/logo"
            android:textStyle="bold"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/text_welcom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/welcome"
            android:layout_below="@+id/appname"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/helvetica"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/enter_numb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_below="@+id/text_welcom"
            android:layout_marginTop="10dp"
            android:text="@string/enter_text"
            android:fontFamily="@font/helvetica"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtMobileNumber"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:drawablePadding="10dp"
            android:layout_below="@+id/enter_numb"
            android:gravity="center_vertical"
            android:fontFamily="@font/helvetica"
            android:paddingBottom="20dp"
            android:paddingStart="10dp"
            android:drawableStart="@drawable/ic_mobile_number"
            android:layout_marginEnd="40dp"
            android:digits="0123456789"
            android:hint="@string/mobile_number"
            android:inputType="number"
            android:maxLength="10"
            android:singleLine="true"
            android:textSize="14sp" />

        <Button
            android:id="@+id/sendcode"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_below="@+id/edtMobileNumber"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_round_color"
            android:paddingStart="40dp"
            android:paddingEnd="40dp"
            android:text="@string/login"
            android:fontFamily="@font/helvetica"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:layout_below="@+id/sendcode"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/helvetica"
            android:text="@string/skip_login"
            android:onClick="goToHomePage"
            android:textSize="16sp"
            android:textAllCaps="false"
            android:textColor="@color/blue"
            android:textStyle="bold" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/login_bg"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:background="@drawable/ic_login_bg"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>